--- a/index.mdx
+++ b/index.mdx
@@ -1,53 +1,53 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Welcome to Flyweel"
+description: "The AdSpendOps Platform for Advertising Teams - Stop wasting time and money. Start turning every ad dollar into accountable, revenue-driving growth."
 ---
 
-## Setting up
+## Getting Started with Flyweel
 
-Get your documentation site up and running in minutes.
+Flyweel is the control layer for your advertising operations. We help high-volume advertising teams save time, make better decisions faster, and unlock hidden ROI.
 
 <Card
-  title="Start here"
+  title="Quick Start Guide"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Get up and running with Flyweel in minutes.
 </Card>
 
-## Make it yours
+## Core Features
 
-Design a docs site that looks great and empowers your users.
+Everything you need to transform your advertising operations.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Real-time Control"
+    icon="gauge"
+    href="/guides/real-time-control"
   >
-    Edit your docs locally and preview them in real time.
+    Take command of your ad spend with real-time visibility and control.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Unified Attribution"
+    icon="target"
+    href="/guides/attribution"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Get a single source of truth for all your advertising data across platforms.
   </Card>
   <Card
-    title="API documentation"
+    title="Automated Workflows"
+    icon="settings"
+    href="/guides/automation"
+  >
+    Eliminate manual tasks and focus on what matters - scaling profitable campaigns.
+  </Card>
+  <Card
+    title="API Integration"
     icon="terminal"
     href="/api-reference/introduction"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Integrate Flyweel with your existing tech stack.
   </Card>
 </Columns>
 
@@ -86,12 +86,12 @@ Everything you need to create world-class documentation.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Ready to Get Started?
 
 <Card
-  title="See complete examples"
+  title="Join the Closed Beta"
   icon="stars"
-  href="https://mintlify.com/customers"
+  href="https://waitlist.flyweel.co"
 >
-  Browse our showcase of exceptional documentation sites.
+  Request early access to Flyweel and start eliminating wasted ad spend today.
 </Card>
