--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,117 @@
 ---
 title: "Welcome to Flyweel"
-description: "The AdSpendOps Platform for Advertising Teams - Stop wasting time and money. Start turning every ad dollar into accountable, revenue-driving growth."
+description: "Flyweel is the intelligent control layer for your advertising operations. We help high-volume advertising teams eliminate waste, make data-driven decisions faster, and unlock hidden ROI across Google Ads, Meta Ads, and beyond."
+keywords:
+  - "SpendOps platform"
+  - "advertising operations"
+  - "ad spend optimization"
+  - "campaign management"
+  - "cross-platform advertising"
+  - "marketing ROI"
+  - "Google Ads management"
+  - "Meta Ads optimization"
 ---
 
-## Getting Started with Flyweel
-
-Flyweel is the control layer for your advertising operations. We help high-volume advertising teams save time, make better decisions faster, and unlock hidden ROI.
+## How to Get Started
 
 <Card
-  title="Quick Start Guide"
+  title="Get Started in Minutes"
   icon="rocket"
-  href="/quickstart"
+  href="/getting-started/quickstart-guide"
   horizontal
 >
-  Get up and running with Flyweel in minutes.
+  Connect your ad accounts and start optimizing campaigns with our comprehensive quick start guide.
 </Card>
 
-## Core Features
+---
 
-Everything you need to transform your advertising operations.
+## Core SpendOps Features
+
+Everything you need to transform your advertising operations and maximize campaign performance.
 
 <Columns cols={2}>
   <Card
-    title="Real-time Control"
-    icon="gauge"
-    href="/guides/real-time-control"
+    title="AdGrid Campaign Manager"
+    icon="grid"
+    href="/features/adgrid-campaign-manager"
   >
-    Take command of your ad spend with real-time visibility and control.
+    Unified dashboard for managing Google Ads and Meta Ads campaigns with advanced filtering and optimization tools.
   </Card>
   <Card
-    title="Unified Attribution"
-    icon="target"
-    href="/guides/attribution"
+    title="AI Agent Chat"
+    icon="robot"
+    href="/features/ai-agent-chat"
   >
-    Get a single source of truth for all your advertising data across platforms.
+    Conversational AI agent that provides instant campaign insights, optimization recommendations, and performance analysis.
   </Card>
   <Card
-    title="Automated Workflows"
-    icon="settings"
-    href="/guides/automation"
+    title="Reports & Analytics"
+    icon="chart-line"
+    href="/features/reports-analytics"
   >
-    Eliminate manual tasks and focus on what matters - scaling profitable campaigns.
+    Cross-platform performance dashboards with customizable metrics, trend analysis, and executive reporting.
   </Card>
   <Card
-    title="API Integration"
+    title="Platform Connections"
+    icon="plug"
+    href="/getting-started/ad-platform-connections"
+  >
+    Seamlessly connect Google Ads and Meta Ads accounts with secure, real-time data synchronization.
+  </Card>
+</Columns>
+
+---
+
+## Why SpendOps?
+
+**SpendOps** is the systematic approach to advertising spend optimization - eliminating waste while maximizing performance across all your campaigns.
+
+<Columns cols={3}>
+  <Card title="Eliminate Waste" icon="scissors">
+    Identify underperforming campaigns and budget inefficiencies with AI-powered analysis.
+  </Card>
+  <Card title="Unified Analytics" icon="chart-bar">
+    Single source of truth for campaign performance across Google Ads and Meta Ads.
+  </Card>
+  <Card title="Smart Automation" icon="gear">
+    AI-driven recommendations and automated insights for continuous optimization.
+  </Card>
+</Columns>
+
+---
+
+## Documentation Sections
+
+<Columns cols={2}>
+  <Card
+    title="User Guide"
+    icon="book-open"
+    href="/getting-started/quickstart-guide"
+  >
+    Complete guides for getting started, connecting platforms, and mastering Flyweel's features.
+  </Card>
+  <Card
+    title="API Reference"
     icon="terminal"
     href="/api-reference/introduction"
   >
-    Integrate Flyweel with your existing tech stack.
+    Beta API documentation for developers building custom integrations with the Flyweel platform.
   </Card>
 </Columns>
 
-## Create beautiful pages
+---
 
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Ready to Get Started?
+## Ready to Optimize Your Ad Spend?
 
 <Card
-  title="Join the Closed Beta"
-  icon="stars"
+  title="Get Early Access to Flyweel"
+  icon="sparkles"
   href="https://waitlist.flyweel.co"
+  horizontal
 >
-  Request early access to Flyweel and start eliminating wasted ad spend today.
+  Join the beta program and start eliminating advertising waste while maximizing campaign performance. Request access today.
 </Card>
+
+---
+
+**Questions?** Contact our team at [support@flyweel.co](mailto:support@flyweel.co) or explore our comprehensive [User Guide](/getting-started/quickstart-guide) to get started.
