Remove API Reference section and replace with Support & Help
- Removed API Reference tab from docs.json navigation
- Removed API Reference groups (API Basics and Endpoints)
- Updated homepage card to show Support & Help instead of API Reference
- Changed card icon from terminal to life-buoy
- Updated card link to mailto:support@flyweel.co for direct support contact
- Simplified navigation structure focusing on core documentation

--- a/index.mdx
+++ b/index.mdx
@@ -91,11 +91,11 @@ Everything you need to transform your advertising operations and maximize campai
     Complete guides for getting started, connecting platforms, and mastering Flyweel's features.
   </Card>
   <Card
-    title="API Reference"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="Support & Help"
+    icon="life-buoy"
+    href="mailto:support@flyweel.co"
   >
-    Beta API documentation for developers building custom integrations with the Flyweel platform.
+    Get help from our team or ask questions about using the Flyweel platform.
   </Card>
 </Columns>
 
