Update support links to team@flyweel.co and remove GitHub link
- Changed all support email references from support@flyweel.co to team@flyweel.co
- Updated homepage (index.mdx) support card and footer contact
- Updated docs.json navbar support link
- Updated quickstart guide support contacts
- Updated account management page support references
- Updated ad platform connections guide support email
- Removed GitHub link from footer socials in docs.json
- Consolidated all support communication to single team email address

--- a/getting-started/quickstart-guide.mdx
+++ b/getting-started/quickstart-guide.mdx
@@ -153,9 +153,9 @@ The AI agent is immediately available on your dashboard. Try asking:
 
 ### Need Help?
 
-- **Email Support**: [support@flyweel.co](mailto:support@flyweel.co)
+- **Email Support**: [team@flyweel.co](mailto:team@flyweel.co)
 - **Documentation**: Browse our complete [User Guide](/features/adgrid-campaign-manager)
-- **Feature Requests**: Share feedback at [support@flyweel.co](mailto:support@flyweel.co)
+- **Feature Requests**: Share feedback at [team@flyweel.co](mailto:team@flyweel.co)
 
 ---
 
