--- a/index.mdx
+++ b/index.mdx
@@ -93,7 +93,7 @@ Everything you need to transform your advertising operations and maximize campai
   <Card
     title="Support & Help"
     icon="life-buoy"
-    href="mailto:support@flyweel.co"
+    href="mailto:team@flyweel.co"
   >
     Get help from our team or ask questions about using the Flyweel platform.
   </Card>
@@ -114,4 +114,4 @@ Everything you need to transform your advertising operations and maximize campai
 
 ---
 
-**Questions?** Contact our team at [support@flyweel.co](mailto:support@flyweel.co) or explore our comprehensive [User Guide](/getting-started/quickstart-guide) to get started.
+**Questions?** Contact our team at [team@flyweel.co](mailto:team@flyweel.co) or explore our comprehensive [User Guide](/getting-started/quickstart-guide) to get started.
