--- a/settings/account-management.mdx
+++ b/settings/account-management.mdx
@@ -168,7 +168,7 @@ Maintain strong account security with robust password management:
 If you're locked out of your account:
 1. **Use password reset** from the login page
 2. **Check email** for recovery instructions
-3. **Contact support** at [support@flyweel.co](mailto:support@flyweel.co) if issues persist
+3. **Contact support** at [team@flyweel.co](mailto:team@flyweel.co) if issues persist
 
 </Tab>
 
@@ -208,7 +208,7 @@ While comprehensive notification settings are in development, you currently rece
 - **Security-related communications**
 - **Product updates and feature announcements**
 
-For immediate notification needs, contact [support@flyweel.co](mailto:support@flyweel.co) to discuss custom alert configurations.
+For immediate notification needs, contact [team@flyweel.co](mailto:team@flyweel.co) to discuss custom alert configurations.
 
 </Tab>
 </Tabs>
@@ -282,8 +282,8 @@ For detailed connection management instructions, see our [Platform Connections G
 
 ### Getting Help
 
-- 📧 **Account Support**: [support@flyweel.co](mailto:support@flyweel.co)
-- 🔒 **Security Issues**: [security@flyweel.co](mailto:security@flyweel.co)  
+- 📧 **Account Support**: [team@flyweel.co](mailto:team@flyweel.co)
+- 🔒 **Security Issues**: [team@flyweel.co](mailto:team@flyweel.co)
 - 📚 **Help Documentation**: Browse our complete user guides
 - 💬 **Live Chat**: Available in-app for immediate assistance
 
