--- a/getting-started/ad-platform-connections.mdx
+++ b/getting-started/ad-platform-connections.mdx
@@ -262,7 +262,7 @@ Flyweel automatically manages API calls to stay within platform limits:
 
 ### Support Resources
 
-- 📧 **Technical Support**: [support@flyweel.co](mailto:support@flyweel.co)
+- 📧 **Technical Support**: [team@flyweel.co](mailto:team@flyweel.co)
 - 📖 **Platform Documentation**: Review [Google Ads Help](https://support.google.com/google-ads) and [Meta Business Help](https://business.facebook.com/help)
 - 🔗 **Account Management**: Visit your respective platform's business manager
 - 💬 **Live Chat**: Available in-app for integration assistance
