docs: add Mintlify changelog + dropdown nav; refactor index with Quick Start links, callouts, at-a-glance table, FAQ; Phase 1 scaffold + GEO improvements on AdGrid/AI Agent/Reports; Phase 2: comparison tables, FAQs, See also on Getting Started & Settings; SEO indexing + metatags; fix icons + alt text

--- a/features/adgrid-campaign-manager.mdx
+++ b/features/adgrid-campaign-manager.mdx
@@ -1,6 +1,6 @@
 ---
-title: "AdGrid Campaign Manager - Unified Ad Campaign Dashboard & Analytics"
-description: "Master Flyweel's AdGrid campaign manager for cross-platform ad optimization. View, analyze, and manage Google Ads and Meta campaigns in one unified dashboard."
+title: "AdGrid Campaign Manager"
+description: "Run Google and Meta in one grid for quick comparisons, filters, and fast decisions."
 keywords:
   - "campaign manager dashboard"
   - "unified ad campaign analytics"
@@ -18,6 +18,63 @@ mode: "wide"
 
 
 # AdGrid Campaign Manager
+# AdGrid Campaign Manager
+
+## What is AdGrid Campaign Manager?
+Run Google and Meta in one grid for quick comparisons, filters, and fast decisions.
+
+## Why it matters
+- Stop budget bleed — Catch wasted spend fast and shut down underperformers before they drain results.
+- One truth, no debate — Google, Meta, and (soon) CRM + finance data in one view everyone trusts.
+- Move faster — Filter, compare, and act without tab‑hopping.
+
+## How to use
+<Steps>
+  <Step title={<a href="/getting-started/ad-platform-connections">Connect platforms</a>}>
+    Authenticate Google Ads and Meta Ads from Platform Connections.
+  </Step>
+  <Step title="Open AdGrid">
+    View and manage campaigns side by side in one place.
+  </Step>
+  <Step title="Compare & filter">
+    Apply filters and sort to find opportunities and risks quickly.
+  </Step>
+  <Step title={<a href="/features/reports-analytics">Review in Reports</a>}>
+    Validate trends in unified KPIs and dashboards; share with your team.
+  </Step>
+  <Step title={<a href="/features/ai-agent-chat">Ask the AI Agent</a>}>
+    Ask a plain‑English question and get charts, tables, or reports in seconds.
+  </Step>
+</Steps>
+
+## See also / related links
+- <a href="/features/ai-agent-chat">AI Agent Chat</a>
+- <a href="/features/reports-analytics">Reports & Analytics</a>
+- <a href="/getting-started/ad-platform-connections">Platform Connections</a>
+- <a href="/getting-started/quickstart-guide">Quick Start Guide</a>
+
+### AdGrid vs. native platform UIs (When to use which)
+
+| Scenario | Use AdGrid | Use native platform UIs |
+| --- | --- | --- |
+| Side-by-side management (Google + Meta) | ✅ One grid, unified actions | — |
+| Cross-platform comparisons & filters | ✅ Compare and filter in one place | — |
+| Platform-specific configuration | — | ✅ Advanced native settings |
+| Quick opportunity spotting | ✅ Unified view highlights issues | — |
+| Detailed channel features | — | ✅ Deep channel-only tools |
+
+## FAQ: direct answers
+### Can I manage Google and Meta together?
+Yes. AdGrid shows both side by side so you can compare and act in one place.
+
+### Where do I see KPIs and dashboards?
+See <a href="/features/reports-analytics">Reports & Analytics</a> for unified dashboards and KPIs.
+
+### How do I connect accounts?
+Use <a href="/getting-started/ad-platform-connections">Platform Connections</a> to authenticate Google Ads and Meta Ads.
+
+### How fast can I get started?
+Most teams connect accounts and see data in minutes. Start with the <a href="/getting-started/quickstart-guide">Quick Start Guide</a>.
 
 <Callout type="info">
 **Your Command Center** - The AdGrid is your central hub for viewing, analyzing, and managing all ad campaigns from Google Ads and Meta Ads in one unified, powerful interface.
