--- a/features/ai-agent-chat.mdx
+++ b/features/ai-agent-chat.mdx
@@ -1,6 +1,6 @@
 ---
-title: "AI Agent for Ad Campaign Optimization - Chat-Based Analytics"
-description: "Master Flyweel's AI agent for intelligent campaign analysis, optimization recommendations, and natural language ad performance insights."
+title: "AI Agent Chat"
+description: "Ask in plain English to get charts, tables, and reports instantly."
 keywords:
   - "AI advertising agent"
   - "campaign optimization AI"
@@ -18,6 +18,55 @@ mode: "wide"
 
 
 # AI Agent for Campaign Optimization
+
+## What is AI Agent Chat?
+Ask in plain English and get charts, tables, and reports instantly to guide your next move.
+
+## Why it matters
+- Faster answers — Skip manual digging and get direct results.
+- Less debate — Share-ready charts and tables keep everyone aligned.
+- More momentum — Recommendations help move from “what happened?” to “what next?”.
+
+## How to use
+<Steps>
+  <Step title="Open AI Agent">
+    Use the chat on your dashboard to start a session.
+  </Step>
+  <Step title="Ask a question">
+    Use plain English. Example: “Show ROAS by platform for last 30 days.”
+  </Step>
+  <Step title="Refine with follow‑ups">
+    Ask for breakdowns, comparisons, or time ranges.
+  </Step>
+  <Step title={<a href="/features/reports-analytics">Share via Reports</a>}>
+    Save or reference visualizations alongside unified KPIs.
+  </Step>
+</Steps>
+
+## See also / related links
+- <a href="/features/adgrid-campaign-manager">AdGrid Campaign Manager</a>
+- <a href="/features/reports-analytics">Reports & Analytics</a>
+- <a href="/getting-started/quickstart-guide">Quick Start Guide</a>
+
+### AI Agent vs. Manual Analysis (When to use which)
+
+| Scenario | Use AI Agent Chat | Use manual analysis |
+| --- | --- | --- |
+| Quick answers and visuals | ✅ Plain-English prompts to charts/tables | — |
+| Exploratory questions | ✅ Fast iterations with follow-ups | — |
+| Deep custom analysis | — | ✅ Complex, bespoke analysis |
+| Repeatable reporting | ✅ Generates summaries and visuals | — |
+| Audit/validation | — | ✅ Verify against native platforms |
+
+## FAQ: direct answers
+### What does the AI Agent generate?
+Charts, tables, and reports from plain‑English prompts.
+
+### Which platforms does it analyze?
+Google Ads and Meta Ads today; CRM, lead distribution, and accounting integrations are coming soon.
+
+### How fast can I get started?
+Most teams connect and see data in minutes. Start with the <a href="/getting-started/quickstart-guide">Quick Start Guide</a>.
 
 <Callout type="info">
 **Your Intelligent Campaign Partner** - The Flyweel AI Agent is a powerful, conversational interface that analyzes your campaign data, provides actionable insights, and delivers optimization recommendations using natural language.
