--- a/features/reports-analytics.mdx
+++ b/features/reports-analytics.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Reports & Analytics - Cross-Platform Ad Performance Dashboards"
-description: "Learn to use Flyweel's reports and analytics dashboard for unified insights into Google Ads and Meta Ads campaign performance. Master cross-platform advertising analytics."
+title: "Reports & Analytics"
+description: "Unified dashboards and KPIs for daily clarity without digging."
 keywords:
   - "ad performance dashboard"
   - "cross-platform advertising analytics"
@@ -18,6 +18,56 @@ mode: "wide"
 
 
 # Reports & Analytics Dashboard
+
+## What is Reports & Analytics?
+Unified dashboards and KPIs for daily clarity without digging.
+
+## Why it matters
+- Single source of truth — Everyone sees the same KPIs across platforms.
+- Faster alignment — Clear visuals help teams decide in seconds.
+- Spot trends quickly — See changes over time without manual exports.
+
+## How to use
+<Steps>
+  <Step title={<a href="/getting-started/ad-platform-connections">Connect platforms</a>}>
+    Authenticate Google Ads and Meta Ads from Platform Connections.
+  </Step>
+  <Step title="Open Reports & Analytics">
+    View unified metrics and dashboards.
+  </Step>
+  <Step title="Pick date range & filters">
+    Use presets or custom ranges; filter by platform and status.
+  </Step>
+  <Step title={<a href="/features/ai-agent-chat">Ask the AI Agent</a>}>
+    Generate charts/tables on demand and summarize trends.
+  </Step>
+</Steps>
+
+## See also / related links
+- <a href="/features/adgrid-campaign-manager">AdGrid Campaign Manager</a>
+- <a href="/features/ai-agent-chat">AI Agent Chat</a>
+- <a href="/getting-started/ad-platform-connections">Platform Connections</a>
+- <a href="/getting-started/quickstart-guide">Quick Start Guide</a>
+
+### Reports vs. AdGrid (When to use which)
+
+| Scenario | Use Reports & Analytics | Use AdGrid |
+| --- | --- | --- |
+| Executive overview / KPIs | ✅ Unified dashboards and KPIs | — |
+| Trend analysis over time | ✅ Visual charts and comparisons | — |
+| Campaign-level actions | — | ✅ Side-by-side management and filters |
+| Quick comparisons across platforms | ✅ High-level comparisons | ✅ Detailed comparisons |
+| Sharing/Presenting to stakeholders | ✅ Share-ready visuals | — |
+
+## FAQ: direct answers
+### How do I compare platforms?
+Use platform filters and the “Performance by Platform” chart.
+
+### Where do I see KPIs?
+On the main dashboard; use presets or custom ranges to adjust.
+
+### Can I drill down to campaigns?
+Yes. Use links from charts or switch to <a href="/features/adgrid-campaign-manager">AdGrid</a> for campaign‑level detail.
 
 <Callout type="info">
 **Your Single Source of Truth** - The Reports & Analytics dashboard provides a high-level, visual overview of your campaign performance across all connected ad platforms, designed for quick trend identification and strategic decision-making.
