--- a/getting-started/ad-platform-connections.mdx
+++ b/getting-started/ad-platform-connections.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Connect Google Ads & Meta Ads to Flyweel - Platform Integration Guide"
-description: "Step-by-step instructions for connecting Google Ads and Meta Ads accounts to Flyweel, including account management, troubleshooting, and best practices."
+title: "Platform Connections"
+description: "Connect Google Ads and Meta Ads to Flyweel in minutes."
 keywords:
   - "Google Ads integration"
   - "Meta Ads connection" 
@@ -17,7 +17,23 @@ mode: "wide"
 ---
 
 
-# Connect Your Advertising Platforms
+# Platform Connections
+
+## What is Platform Connections?
+Connect Google Ads and Meta Ads to Flyweel in minutes.
+
+## See also / related links
+- <a href="/getting-started/quickstart-guide">Quick Start Guide</a>
+- <a href="/features/adgrid-campaign-manager">AdGrid Campaign Manager</a>
+- <a href="/features/ai-agent-chat">AI Agent Chat</a>
+- <a href="/features/reports-analytics">Reports & Analytics</a>
+
+## FAQ: direct answers
+### Which platforms are supported today?
+Google Ads and Meta Ads. CRM, lead distribution, and accounting integrations are coming soon.
+
+### How fast can I get started?
+Most teams connect and see data in minutes. Start with the <a href="/getting-started/quickstart-guide">Quick Start Guide</a>.
 
 <Callout type="info">
 **Unified Campaign Management** - Flyweel integrates with the most popular advertising platforms to help you consolidate and analyze your campaign data in one powerful dashboard.
