--- a/index.mdx
+++ b/index.mdx
@@ -12,22 +12,38 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-## How to Get Started
+<Check>Today: connect your core ad platforms in minutes.</Check>
+<Info>Coming soon: CRM, lead distribution, and accounting integrations to extend visibility from spend to revenue.</Info>
 
-<Card
-  title="Get Started in Minutes"
-  icon="rocket"
-  href="/getting-started/quickstart-guide"
-  horizontal
->
-  Connect your ad accounts and start optimizing campaigns with our comprehensive quick start guide.
-</Card>
+## Why your team will actually use Flyweel
 
----
+- Stop budget bleed — Catch wasted spend fast and shut down underperformers before they drain results.
+- One truth, no debate — Google, Meta, and (soon) CRM + finance data in one view everyone trusts.
+- Automation that moves — AI drafts reports, flags risks, and recommends reallocations so growth keeps rolling.
 
-## Core SpendOps Features
+## Quick start: connect Google Ads and Meta Ads
 
-Everything you need to transform your advertising operations and maximize campaign performance.
+<Steps>
+  <Step title={<a href="/getting-started/quickstart-guide">Create a workspace</a>}>
+    Set name, region, and preferred display currency.
+  </Step>
+  <Step title={<a href="/getting-started/ad-platform-connections">Connect platforms</a>}>
+    Authenticate Google Ads and Meta Ads from Platform Connections.
+  </Step>
+  <Step title={<a href="/features/adgrid-campaign-manager">Open AdGrid</a>}>
+    View and manage campaigns side by side in one place.
+  </Step>
+  <Step title={<a href="/features/ai-agent-chat">Try the AI Agent</a>}>
+    Ask a plain‑English question and get charts, tables, or reports in seconds.
+  </Step>
+  <Step title={<a href="/features/reports-analytics">Review Reports & Analytics</a>}>
+    Use unified dashboards and KPIs to align your team.
+  </Step>
+</Steps>
+
+Need more detail? See the <a href="/getting-started/quickstart-guide">Quick Start Guide</a> and <a href="/getting-started/ad-platform-connections">Platform Connections</a> pages.
+
+## Core features
 
 <Columns cols={2}>
   <Card
@@ -35,83 +51,78 @@ Everything you need to transform your advertising operations and maximize campai
     icon="grid"
     href="/features/adgrid-campaign-manager"
   >
-    Unified dashboard for managing Google Ads and Meta Ads campaigns with advanced filtering and optimization tools.
+    Run Google and Meta in one grid for quick comparisons, filters, and fast decisions.
   </Card>
   <Card
     title="AI Agent Chat"
-    icon="robot"
+    icon="comments"
+    iconType="solid"
     href="/features/ai-agent-chat"
   >
-    Conversational AI agent that provides instant campaign insights, optimization recommendations, and performance analysis.
+    Ask in plain English. Get charts, tables, and reports instantly to guide your next move.
   </Card>
   <Card
     title="Reports & Analytics"
-    icon="chart-line"
+    icon="chart-bar"
+    iconType="solid"
     href="/features/reports-analytics"
   >
-    Cross-platform performance dashboards with customizable metrics, trend analysis, and executive reporting.
+    Daily clarity without digging. Unified dashboards and KPIs give your team focus in seconds.
   </Card>
   <Card
     title="Platform Connections"
     icon="plug"
     href="/getting-started/ad-platform-connections"
   >
-    Seamlessly connect Google Ads and Meta Ads accounts with secure, real-time data synchronization.
+    Connect Google and Meta today. CRM, lead distribution, and accounting data integrations are coming soon.
   </Card>
 </Columns>
 
----
+## Where to find things (at a glance)
 
-## Why SpendOps?
+| Goal | Use this feature | Where in the docs |
+|---|---|---|
+| Manage campaigns in one place | AdGrid Campaign Manager | See <a href="/features/adgrid-campaign-manager">AdGrid</a> |
+| Ask a question and get a chart/table/report | AI Agent Chat | See <a href="/features/ai-agent-chat">AI Agent Chat</a> |
+| View dashboards and KPIs | Reports & Analytics | See <a href="/features/reports-analytics">Reports & Analytics</a> |
+| Connect Google and Meta | Platform Connections | See <a href="/getting-started/ad-platform-connections">Platform Connections</a> |
 
-**SpendOps** is the systematic approach to advertising spend optimization - eliminating waste while maximizing performance across all your campaigns.
+## FAQ: direct answers
 
-<Columns cols={3}>
-  <Card title="Eliminate Waste" icon="scissors">
-    Identify underperforming campaigns and budget inefficiencies with AI-powered analysis.
-  </Card>
-  <Card title="Unified Analytics" icon="chart-bar">
-    Single source of truth for campaign performance across Google Ads and Meta Ads.
-  </Card>
-  <Card title="Smart Automation" icon="gear">
-    AI-driven recommendations and automated insights for continuous optimization.
-  </Card>
-</Columns>
+### What does the AI Agent generate?
+Charts, tables, and reports from plain-English prompts—so you can go from question to next move quickly.
 
----
+### Which platforms does Flyweel support today?
+Google Ads and Meta Ads. Coming soon: CRM, lead distribution, and accounting integrations.
+
+### How fast can I get started?
+Most teams connect accounts and see data in minutes. Start with <a href="/getting-started/quickstart-guide">Quick Start Guide</a>.
+
+### How do I get help?
+Email <a href="mailto:team@flyweel.co">team@flyweel.co</a>
 
 ## Documentation Sections
 
-<Columns cols={2}>
+<Columns cols={3}>
   <Card
     title="User Guide"
     icon="book-open"
     href="/getting-started/quickstart-guide"
   >
-    Complete guides for getting started, connecting platforms, and mastering Flyweel's features.
+    Step-by-step setup and usage.
   </Card>
   <Card
     title="Support & Help"
-    icon="life-buoy"
+    icon="headphones"
     href="mailto:team@flyweel.co"
   >
-    Get help from our team or ask questions about using the Flyweel platform.
+    Need a hand? Email team@flyweel.co
+  </Card>
+  <Card
+    title="Changelog"
+    icon="megaphone"
+    href="/changelog"
+  >
+    Product updates. RSS available.
   </Card>
 </Columns>
-
----
-
-## Ready to Optimize Your Ad Spend?
-
-<Card
-  title="Get Early Access to Flyweel"
-  icon="sparkles"
-  href="https://waitlist.flyweel.co"
-  horizontal
->
-  Join the beta program and start eliminating advertising waste while maximizing campaign performance. Request access today.
-</Card>
-
----
-
-**Questions?** Contact our team at [team@flyweel.co](mailto:team@flyweel.co) or explore our comprehensive [User Guide](/getting-started/quickstart-guide) to get started.
