--- a/settings/account-management.mdx
+++ b/settings/account-management.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Account Management & Settings - Manage Your Flyweel Profile"
-description: "Complete guide to managing your Flyweel account settings, security preferences, notification settings, and business profile configuration for optimal SpendOps performance."
+title: "Account Management"
+description: "Manage profile, security, notifications, and connections in one place."
 keywords:
   - "Flyweel account settings"
   - "user profile management"
@@ -26,6 +26,23 @@ mode: "wide"
 The **Account Management** section provides comprehensive control over your Flyweel account configuration. From business profile setup to security management, these settings ensure your SpendOps platform is tailored to your specific needs and maintains the highest security standards.
 
 ## Settings Overview
+
+## See also / related links
+- <a href="/getting-started/ad-platform-connections">Platform Connections</a>
+- <a href="/getting-started/quickstart-guide">Quick Start Guide</a>
+- <a href="/features/adgrid-campaign-manager">AdGrid Campaign Manager</a>
+- <a href="/features/reports-analytics">Reports & Analytics</a>
+- <a href="/features/ai-agent-chat">AI Agent Chat</a>
+
+## FAQ: direct answers
+### How do I change my display currency?
+Go to Settings > Account > Profile and select a currency; Reports will reflect it.
+
+### How do I update my password?
+Settings > Account > Security; follow the password requirements and save.
+
+### Where do I manage connections?
+Settings > Connections, or see <a href="/getting-started/ad-platform-connections">Platform Connections</a>.
 
 Access your account settings from the main navigation menu to configure:
 
