--- a/settings/billing-subscription.mdx
+++ b/settings/billing-subscription.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Billing & Subscription Management - Flyweel Pricing & Plans"
-description: "Complete guide to managing your Flyweel subscription, billing information, payment methods, and plan upgrades for your SpendOps platform access."
+title: "Billing & Subscription"
+description: "Manage your Flyweel plan, payments, invoices, and upgrades."
 keywords:
   - "Flyweel pricing plans"
   - "subscription management"
@@ -17,7 +17,7 @@ mode: "wide"
 ---
 
 
-# Billing & Subscription Management
+# Billing & Subscription
 
 <Callout type="info">
 **Flexible Subscription Management** - The Billing & Subscription page provides centralized control over your Flyweel subscription plan, payment methods, billing history, and account management.
@@ -26,6 +26,21 @@ mode: "wide"
 The **Billing & Subscription** section serves as your command center for all financial aspects of your Flyweel SpendOps platform subscription. From plan management to invoice tracking, this comprehensive interface ensures transparent and flexible billing management.
 
 ## Subscription Overview
+
+## See also / related links
+- <a href="/settings/account-management">Account Management</a>
+- <a href="/getting-started/ad-platform-connections">Platform Connections</a>
+- <a href="/getting-started/quickstart-guide">Quick Start Guide</a>
+
+## FAQ: direct answers
+### How do I update my payment method?
+Settings > Billing & Subscription > Payment Methods.
+
+### Where do I download invoices?
+Settings > Billing & Subscription > Billing History.
+
+### Can I change plans mid-cycle?
+Yes. Upgrades apply immediately; downgrades take effect at renewal.
 
 Your Flyweel subscription provides access to powerful SpendOps capabilities designed to eliminate advertising waste and maximize campaign performance across Google Ads and Meta Ads.
 
